[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -217.0
margin_right = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 180.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxButtons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_left = 50.0
margin_right = 150.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
size_flags_horizontal = 4
custom_constants/separation = 20

[node name="ButtonPlay" type="Button" parent="CenterContainer/VBoxContainer/VBoxButtons"]
margin_right = 100.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Play"

[node name="ButtonExit" type="Button" parent="CenterContainer/VBoxContainer/VBoxButtons"]
margin_top = 50.0
margin_right = 100.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 200.0
margin_bottom = 144.0
text = "A game by idleluke and Hoimar"
align = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxButtons/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxButtons/ButtonExit" to="." method="_on_ButtonExit_pressed"]
